# news-aggregator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  news.db  pyproject.toml  requirements.txt  run.py
api_front/: Dockerfile  requirements.txt
api_front/static/: style.css
collectors/newsapi_collector/: main.py  requirements.txt
collectors/worldnews_collector/: main.py
database/migrations/init/: init.sh
news_aggregator/: cli.py
news_aggregator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
news_aggregator/ai/: analyzers.py  llm.py
news_aggregator/api_front/: Dockerfile  main.py
news_aggregator/api_front/static/: style.css
news_aggregator/api_front/templates/: index.html
news_aggregator/collectors/newsapi_collector/: Dockerfile  main.py
news_aggregator/collectors/worldnews_collector/: Dockerfile  main.py
news_aggregator/database/: connection.py
news_aggregator/database/migrations/: 001_init.sql
